<resources>
    <string name="app_name">Flush</string>
    <string name="button">Button</string>
    <string name="textinput">Hello World!</string>
    <string name="save_name">Save Name</string>
    <string name="change_password">Change Password</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="user_login">User Login</string>
    <string name="no_account_yet_register">No Account Yet? Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="reason">State your reason for admin request...</string>
    <string name="login_picture">Login picture</string>
    <string name="send">Send</string>
    <string name="nearme">Near Me</string>
    <string name="categories">Categories</string>
    <string name="submitreview">Submit Review</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="qr">Scan QR Code</string>
    <string name="rate">How would you rate</string>
    <string name="comments">Enter your comments here</string>
    <string name="bidet">Bidet</string>
    <string name="powerflush">Power Flush</string>
    <string name="aircon">Air Conditioned</string>
    <string name="dryer">Air Dryer</string>
    <string name="establishment_details">Enter establishment details</string>
    <string name="admin_settings">Administration Settings</string>
    <string name="customer_settings">Customer Settings</string>
    <string name="owner_establishment">Owner:</string>
    <string name="create_account">Create Account</string>
    <string name="user_registration">User Registration</string>
    <string name="already_registered_sign_in">Already Registered? Sign In</string>
    <string name="logout">Log Out</string>
    <string name="description">Description</string>
    <string name="popular">Popular</string>
    <string name="featured">Featured</string>
    <string name="history">History</string>
    <string name="title">Title</string>
    <string name="establishment_picture">Establishment Picture</string>
    <string name="directions">Directions</string>
    <string name="delete_account">Delete Account</string>
    <string name="request_access">Request Access</string>
    <string name="form_establishment">Establishment Form</string>
    <string name="rating_establishment">Rating</string>
    <string name="longitude_establishment">Longitude</string>
    <string name="latitude_establishment">Latitude</string>
    <string name="location_establishment">Location</string>
    <string name="picture_establishment">Picture Link</string>
    <string name="submit_form">Submit Form</string>
    <string name="save_changes">Save Changes</string>
    <string name="establishment_name">Establishment Name:</string>
    <string name="add_establishment">Add Establishment</string>
    <string name="edit_establishment">Edit Establishment</string>
    <string name="delete_establishment">Delete Establishment</string>
    <string name="account_settings">Account Settings</string>
    <string name="facebook_app_id">1319944051785586</string>
    <string name="fb_login_protocol_scheme">fb1319944051785586</string>
</resources>