<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSpecificEstablishment">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:theme="@style/Theme.Apirtayo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/nav_menu"/>

    <TextView
        android:id="@+id/text_establishment"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/edit_establishment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/Establishmentname"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_establishment" />

    <EditText
        android:id="@+id/Establishmentrating"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/rating_establishment"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Establishmentname" />

    <EditText
        android:id="@+id/Establishmentlongitude"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/longitude_establishment"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Establishmentrating" />

    <EditText
        android:id="@+id/Establishmentlatitude"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/latitude_establishment"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Establishmentlongitude" />

    <EditText
        android:id="@+id/Establishmentlocation"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/location_establishment"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Establishmentlatitude" />

    <EditText
        android:id="@+id/Establishmentpicture"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/picture_establishment"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Establishmentlocation" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_bidet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:text="@string/bidet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_aircon" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_powerflush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/powerflush"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_airdryer" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_aircon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:text="@string/aircon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Establishmentpicture" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_airdryer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/dryer"
        app:layout_constraintStart_toEndOf="@id/sw_aircon"
        app:layout_constraintTop_toBottomOf="@id/Establishmentpicture" />

    <EditText
        android:id="@+id/Establishmentabout"
        android:layout_width="308dp"
        android:layout_height="115dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/establishment_details"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/sw_bidet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_changes"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:text="@string/save_changes"
        android:layout_marginTop="10dp"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@+id/Establishmentabout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>