<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEstablishment"
    android:background="@color/colorbrandsecondary">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:theme="@style/Theme.Primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/nav_menu"/>

    <TextView
        android:id="@+id/tv_establishment"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/form_establishment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_establishmentname"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_establishment" />

    <EditText
        android:id="@+id/et_establishmentlongitude"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/longitude_establishment"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="176dp"
        app:layout_constraintTop_toBottomOf="@id/et_establishmentname"/>

    <EditText
        android:id="@+id/et_establishmentlatitude"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/latitude_establishment"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_establishmentlongitude" />

    <EditText
        android:id="@+id/et_establishmentlocation"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/location_establishment"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_establishmentlatitude" />

    <EditText
        android:id="@+id/et_establishmentpicture"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/picture_establishment"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_establishmentlocation" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_bidet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:text="@string/bidet"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/sw_aircon"
        app:layout_constraintTop_toBottomOf="@id/et_establishmentpicture" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_powerflush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:text="@string/powerflush"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toEndOf="@+id/sw_airdryer"
        app:layout_constraintTop_toBottomOf="@id/sw_bidet" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_aircon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:text="@string/aircon"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_establishmentpicture" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_airdryer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:text="@string/dryer"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_aircon" />

    <EditText
        android:id="@+id/et_establishmentabout"
        android:layout_width="309dp"
        android:layout_height="85dp"
        android:ems="10"
        android:gravity="start|bottom"
        android:hint="@string/establishment_details"
        android:inputType="textMultiLine"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintBottom_toTopOf="@+id/submit_establishment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_airdryer" />

    <Button
        android:id="@+id/submit_establishment"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:text="@string/submit_form"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>